# data-structures

./: .gitignore  CMakeLists.txt  README.md  linkedlist.c
inc/: linkedlist.h  nodechain.h
inc/dslib/: collect_utils.h  core.h  err.h  linkedlist.h
inc/internal/: nodechain.h
inc/libds/: core.h  err.h  linkedlist.h  list.h
include/libds/: core.h  list.h  listdef.h  queuedef.h  stackdef.h
include/libds/impl/: contdef.h  nodechain.h
src/: err.c  linkedlist.c  node.c  nodechain.c
src/internal/: node.c  node.h  utils.h
tests/: CMakeLists.txt  test_listdef.c  test_main.c  test_nodechain.c  test_runner.h
